Dark mode toggle color fix.

--- a/web/themes/custom/roach/assets/css/components.css
+++ b/web/themes/custom/roach/assets/css/components.css
@@ -1428,7 +1428,8 @@
   --dark-mode-toggle-color: var(--color-contrast-high); }
 
 [data-theme="dark"] {
-  --dark-mode-toggle-background: var(--page-background); }
+  --dark-mode-toggle-background: var(--page-background);
+  --dark-mode-toggle-color: var(--color-contrast-lower); }
 
 .dark-mode-toggle {
   position: relative;
