--- a/web/themes/custom/roach/assets/scss/components/ui/_dark-mode-toggle.scss
+++ b/web/themes/custom/roach/assets/scss/components/ui/_dark-mode-toggle.scss
@@ -5,6 +5,7 @@
 
 [data-theme="dark"] {
   --dark-mode-toggle-background: var(--page-background);
+  --dark-mode-toggle-color: var(--color-contrast-lower);
 }
 
 .dark-mode-toggle {
